--- a/package.json
+++ b/package.json
@@ -7,15 +7,23 @@
     "dev": "DEBUG=qioptimazer:* nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "~1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "dotenv": "~4.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "mongodb": "^3.1.1",
     "mongoose": "^4.13.14",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "node-sass-middleware": "0.11.0",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "serve-favicon": "~2.4.5"
   },
   "devDependencies": {
