--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
-    "dotenv": "~4.0.0",
+    "dotenv": "^4.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
