--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bcrypt": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.18.2",
+    "cloudinary": "^1.11.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^2.0.1",
@@ -22,6 +23,7 @@
     "mongoose": "^4.13.14",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "node-sass-middleware": "0.11.0",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
